--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nanoid": "^5.0.7",
     "number-precision": "^1.6.0",
     "pinia": "^3.0.2",
+    "pnpm": "^10.15.1",
     "pptxgenjs": "^3.12.0",
     "pptxtojson": "^1.5.2",
     "prosemirror-commands": "^1.6.0",
